--- a/src/scss/_gerais.scss
+++ b/src/scss/_gerais.scss
@@ -444,6 +444,7 @@ header {
 /*Adsense
 **********/
 .adsense {
+  margin: 50px 0;
   display: flex;
   justify-content: center;
   align-items: center;
