--- a/src/css/style.css
+++ b/src/css/style.css
@@ -225,10 +225,14 @@ img {
   grid-template-areas: "list sidebar";
   grid-template-columns: 2fr 1fr; }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1199px) {
   .content.archive {
     grid-template-areas: "list";
-    grid-template-columns: 100%; } }
+    grid-template-columns: 100%; }
+  .post-list {
+    justify-self: center; }
+  .right-sidebar {
+    display: none; } }
 
 .content .chapeu {
   color: #6318af;
@@ -523,11 +527,11 @@ header {
 .right-sidebar {
   grid-area: sidebar;
   justify-self: end;
-  padding: 0 0 20px;
-  min-width: 320px; }
+  padding: 0 0 20px 20px;
+  min-width: 300px; }
 
 .right-sidebar .widgets {
-  max-width: 320px;
+  max-width: 300px;
   top: 10px; }
 
 .right-sidebar .search-box {
@@ -744,13 +748,22 @@ input[type="range"]::-moz-focus-outer {
     clear: both;
     width: 100%; }
   .post-item .box-details.inside::before {
-    margin-bottom: 0px; }
+    -webkit-transform: unset;
+    -moz-transform: unset;
+    -ms-transform: unset;
+    -o-transform: unset;
+    transform: unset; }
   .box-details.inside::before {
     opacity: 0.8;
     visibility: visible; }
   .inside .box-details-info {
     opacity: 1;
-    visibility: visible; }
+    visibility: visible;
+    -webkit-transform: unset;
+    -moz-transform: unset;
+    -ms-transform: unset;
+    -o-transform: unset;
+    transform: unset; }
   .inside .box-details-info {
     display: block;
     overflow: hidden; } }
@@ -1623,8 +1636,8 @@ input[type="range"]::-moz-focus-outer {
 
 .banner-slide .banner-overlay {
   position: relative;
-  background: #623c97;
-  background: linear-gradient(180deg, rgba(98, 60, 151, 0.2) 0%, rgba(255, 255, 255, 0.3) 70%, white 100%);
+  background: rgba(99, 24, 175, 0.2);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.1) 80%, white 100%);
   color: #fff;
   padding: 0px 20px;
   grid-area: mleft;
@@ -1890,11 +1903,11 @@ input[type="range"]::-moz-focus-outer {
 @media screen and (max-width: 767px) {
   .grid-noticias {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     margin: 10px 0; }
   .grid-noticias .miniaturas {
     display: flex;
-    flex-direction: row; }
+    flex-direction: column; }
   .featured-posts {
     width: auto;
     overflow-x: scroll;
@@ -1914,16 +1927,9 @@ input[type="range"]::-moz-focus-outer {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); }
   .featured-posts .grid-noticias .post-item.featured {
-    height: 142px;
-    margin-right: 8px; }
+    margin-right: unset; }
   .featured-posts .grid-noticias .post-item {
-    width: 240px;
-    height: 142px;
-    margin-bottom: 0; }
-  .featured-posts .miniaturas .grid-50:not(:last-of-type) .post-item {
-    margin-right: 8px; }
-  .featured-posts .grid-noticias .miniaturas .post-item:not(:last-of-type) {
-    margin-right: 8px; }
+    height: 300px; }
   .grid-noticias .post-item.featured h3 {
     font-size: 14px;
     line-height: 16px; } }
@@ -2051,6 +2057,25 @@ input[type="range"]::-moz-focus-outer {
   font-style: italic;
   line-height: 50px;
   padding: 30px 0px 0px 30px; }
+
+.banner-destaque .content .title.podcast {
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: unset; }
+
+.banner-destaque .content .title.podcast p {
+  font-size: 20px;
+  align-self: flex-end;
+  color: #e8b200;
+  font-weight: 300;
+  text-transform: uppercase; }
+
+.banner-destaque .content .title.podcast h1 {
+  font-size: 72px;
+  font-weight: 900;
+  font-style: italic;
+  line-height: 50px; }
 
 .podcast-banner .logo {
   grid-area: logo;
@@ -2204,7 +2229,9 @@ input[type="range"]::-moz-focus-outer {
 .podcasts .card .card-content,
 .podcast-list ul li {
   display: flex;
-  padding: 20px 0px;
+  padding: 20px 0px; }
+
+.podcast-list ul li {
   border-bottom: 1px solid #e6e6e6; }
 
 .podcast-item-detail {
@@ -2242,7 +2269,7 @@ input[type="range"]::-moz-focus-outer {
     display: none; }
   .podcast-box {
     grid-template-areas: "plataformas" "lista";
-    grid-template-rows: 100px auto;
+    grid-template-rows: 100px 80%;
     grid-template-columns: auto; }
   .podcast-list {
     margin-left: 10px;
@@ -2316,7 +2343,7 @@ input[type="range"]::-moz-focus-outer {
   padding: 10px;
   background: #6318af;
   border-radius: 30px;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   margin: 5px 10px; }
 
 .tab-programacao .btns-box .tab-buttons .tab-btn.active-btn {
@@ -2371,7 +2398,8 @@ input[type="range"]::-moz-focus-outer {
   height: 200px;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover; }
+  background-size: cover;
+  border-radius: 10px; }
 
 .card-programa .card-info {
   display: flex;
@@ -2390,6 +2418,17 @@ input[type="range"]::-moz-focus-outer {
   font-family: "Open Sans";
   font-size: 12px;
   font-weight: normal; }
+
+@media screen and (max-width: 767px) {
+  .tab-programacao .btns-box .tab-buttons {
+    flex-wrap: wrap;
+    justify-content: flex-start; }
+  .tab-programacao .btns-box .tab-buttons .tab-btn {
+    width: 130px; }
+  .tab-programacao {
+    grid-template-rows: minmax(50px, auto) auto; }
+  .tab-programacao .btns-box {
+    margin-bottom: 20px; } }
 
 /* Peça sua música
 *******************/
@@ -2444,6 +2483,7 @@ input[type="range"]::-moz-focus-outer {
   padding: 20px; }
 
 .pecaSuaMusica .bnt-enviar {
+  outline: none;
   cursor: pointer;
   border: none; }
 
@@ -2897,9 +2937,13 @@ input[type="range"]::-moz-focus-outer {
   .post-list {
     width: 100%; } }
 
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
   .post-list {
     min-width: 700px; } }
+
+@media (min-width: 960px) {
+  .post-list {
+    min-width: 500px; } }
 
 /*Página Single
 *********************/
