--- a/src/scss/_banner_rotativo.scss
+++ b/src/scss/_banner_rotativo.scss
@@ -100,8 +100,8 @@
 .banner-slide .banner-overlay {
   //background-color: rgba($color: $mfm-cinza, $alpha: .2);
   position: relative;
-  background: rgb(98, 60, 151);
-  background: linear-gradient(180deg, rgba(98, 60, 151, 0.2) 0%, rgba(255, 255, 255, 0.3) 70%, rgba(255, 255, 255, 1) 100%);
+  background: rgba($color: $mfm-roxo, $alpha: 0.2);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.1) 80%, rgba(255, 255, 255, 1) 100%);
   color: #fff;
   padding: 0px 20px;
   grid-area: mleft;
