--- a/src/scss/_programacao.scss
+++ b/src/scss/_programacao.scss
@@ -2,146 +2,162 @@
 ***************/
 
 .section.programacao {
-    padding: 20px 0;
-    //min-height: 600px;
-    overflow: hidden;
-    margin-bottom: 40px;
+  padding: 20px 0;
+  //min-height: 600px;
+  overflow: hidden;
+  margin-bottom: 40px;
 }
 
 .section.programacao .content {
-    padding: 20px 0;
+  padding: 20px 0;
 }
-
 
 /* Tab Programação
 *******************/
 
 .tab-programacao {
-    display: grid;
-    grid-template-areas: "tabs" "tabs-content";
-    grid-template-rows: minmax(50px, 80px) auto;
-    grid-template-columns: 100%;
-    justify-content: center;
-    margin-top: 60px;
+  display: grid;
+  grid-template-areas: "tabs" "tabs-content";
+  grid-template-rows: minmax(50px, 80px) auto;
+  grid-template-columns: 100%;
+  justify-content: center;
+  margin-top: 60px;
 }
 
 .tab-programacao .btns-box {
-    grid-area: tabs;
-    width: 100%;
+  grid-area: tabs;
+  width: 100%;
 }
 
 .tab-programacao .btns-box .tab-buttons {
-    display: flex;
-    justify-content: space-between;
-    overflow-x: scroll;
-    padding: 0px 5px;
+  display: flex;
+  justify-content: space-between;
+  overflow-x: scroll;
+  padding: 0px 5px;
 }
 
 .tab-programacao .btns-box .tab-buttons::-webkit-scrollbar {
-    height: 0;
-    background: $white;
+  height: 0;
+  background: $white;
 }
 
 .tab-programacao .btns-box .tab-buttons .tab-btn {
-    cursor: pointer;
-    font-size: 18px;
-    text-transform: uppercase;
-    color: $white;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-content: center;
-    padding: 10px;
-    background: $mfm-roxo;
-    border-radius: 30px;
-    transition: all .3s ease-in-out;
-    margin: 5px 10px;
+  cursor: pointer;
+  font-size: 18px;
+  text-transform: uppercase;
+  color: $white;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-content: center;
+  padding: 10px;
+  background: $mfm-roxo;
+  border-radius: 30px;
+  transition: all 0.3s ease-in-out;
+  margin: 5px 10px;
 }
 
 .tab-programacao .btns-box .tab-buttons .tab-btn.active-btn {
-    color: $mfm-roxo;
-    background: $mfm-amarelo;
+  color: $mfm-roxo;
+  background: $mfm-amarelo;
 }
 
 .tab-programacao .btns-box .tab-buttons .tab-btn:hover {
-    color: $mfm-roxo;
-    background: $mfm-amarelo;
+  color: $mfm-roxo;
+  background: $mfm-amarelo;
 }
 
 .tab-programacao .tabs-content {
-    grid-area: tabs-content;
+  grid-area: tabs-content;
 }
 
 .tab-programacao .tabs-content {
-    max-width: 100%;
-    max-height: 700px;
-    overflow-y: scroll;
-    scrollbar-color: $mfm-amarelo $mfm-roxo !important;
-    scrollbar-width: thin !important;
+  max-width: 100%;
+  max-height: 700px;
+  overflow-y: scroll;
+  scrollbar-color: $mfm-amarelo $mfm-roxo !important;
+  scrollbar-width: thin !important;
 }
 
 .tab-programacao .tabs-content::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
+  width: 10px;
+  height: 10px;
 }
 
 .tab-programacao .tabs-content::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    background: $mfm-amarelo;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  background: $mfm-amarelo;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
 .tab-programacao .tabs-content::-webkit-scrollbar {
-    height: 0;
-    background: $white;
+  height: 0;
+  background: $white;
 }
 
 .tab-programacao .tabs-content .tab {
-    display: none;
+  display: none;
 }
 
 .tab-programacao .tabs-content .tab.active-tab {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .card-programa {
-    display: flex;
-    flex-wrap: no-wrap;
-    margin: 0px 10px 30px 0px;
-    //border: 1px solid $mfm-cinza;
-    height: 200px;
+  display: flex;
+  flex-wrap: no-wrap;
+  margin: 0px 10px 30px 0px;
+  //border: 1px solid $mfm-cinza;
+  height: 200px;
 }
 
 .card-programa .cover-img {
-    width: 200px;
-    height: 200px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+  width: 200px;
+  height: 200px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
 }
 
 .card-programa .card-info {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 10px;
-    max-width: 160px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+  max-width: 160px;
 }
 
 .card-programa .card-info h3 {
-    color: $mfm-roxo;
-    font-size: 18px;
-    font-weight: 900;
+  color: $mfm-roxo;
+  font-size: 18px;
+  font-weight: 900;
 }
 
 .card-programa .card-info h5,
 .card-programa .card-info p {
-    color: $mfm-cinza;
-    font-family: $font-open-sans;
-    font-size: 12px;
-    font-weight: normal;
+  color: $mfm-cinza;
+  font-family: $font-open-sans;
+  font-size: 12px;
+  font-weight: normal;
+}
+
+@media screen and (max-width: 767px) {
+  .tab-programacao .btns-box .tab-buttons {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+  .tab-programacao .btns-box .tab-buttons .tab-btn {
+    width: 130px;
+  }
+  .tab-programacao {
+    grid-template-rows: minmax(50px, auto) auto;
+  }
+  .tab-programacao .btns-box {
+    margin-bottom: 20px;
+  }
 }
